# nv_engine

./: .gitignore  CMakeLists.txt  LICENSE  TODO  build.sh  run.sh
cmake/: FindGLFW3.cmake
inc/Core/: Transform.hpp  Types.hpp
inc/Core/Camera/: PerspectiveCamera.hpp
inc/Renderer/: Renderer.hpp
inc/Renderer/Buffers/: ABindable.hpp  AVertexArray.hpp  AVertexBuffer.hpp  BindGuard.hpp  BufferLayout.hpp
inc/Renderer/Interface/Buffers/: ABuffer.hpp  AIndexBuffer.hpp  AVertexArray.hpp  AVertexBuffer.hpp
inc/Renderer/Interface/Shaders/: AShader.hpp
inc/Renderer/OpenGL/: Renderer_OpenGL.hpp
inc/Renderer/OpenGL/Buffers/: Bindable.hpp  Buffer.hpp  BufferLayout.hpp  IndexBuffer.hpp  RenderResourceHandle.hpp  Types.hpp  VertexArray.hpp  VertexBuffer.hpp
inc/Renderer/OpenGL/Context/: Context.hpp  Event.hpp  Input.hpp  Window.hpp
inc/Renderer/OpenGL/Models/: Material.hpp  Material.ipp  Mesh.hpp  Model.hpp
inc/Renderer/OpenGL/Shaders/: Program.hpp  Shader.hpp
inc/Renderer/OpenGL/Textures/: Texture2D.hpp
inc/Renderer/RendererAPIs/OpenGL/: OpenGL_RendererAPI.hpp
inc/Renderer/RendererAPIs/OpenGL/Buffers/: OpenGL_IndexBuffer.hpp  OpenGL_VertexArray.hpp  OpenGL_VertexBuffer.hpp
inc/Renderer/RendererAPIs/OpenGL/Shaders/: Shader.hpp
inc/Tools/: Guard.hpp
src/Core/: Transform.cpp
src/Core/Camera/: PerspectiveCamera.cpp
src/Renderer/: Renderer.cpp
src/Renderer/Buffers/: ABindable.cpp  ABuffer.cpp  AIndexBuffer.cpp  AVertexArray.cpp  AVertexBuffer.cpp  BufferLayout.cpp
src/Renderer/Interface/: Renderer.cpp
src/Renderer/Interface/Buffers/: ABindable.cpp  ABuffer.cpp  AIndexBuffer.cpp  AVertexArray.cpp  AVertexBuffer.cpp  BufferLayout.cpp
src/Renderer/Interface/Shaders/: AShader.cpp
src/Renderer/OpenGL/Buffers/: Bindable.cpp  Buffer.cpp  BufferLayout.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Renderer/OpenGL/Models/: Material.cpp  Mesh.cpp  Model.cpp
src/Renderer/OpenGL/Shaders/: Program.cpp  Shader.cpp
src/Renderer/OpenGL/Textures/: Texture2D.cpp
src/Renderer/OpenGL/Window/: Context.cpp  Window.cpp
src/Renderer/RendererAPIs/OpenGL/: OpenGL_RendererAPI.cpp
src/Renderer/RendererAPIs/OpenGL/Buffers/: OpenGL_IndexBuffer.cpp  OpenGL_VertexArray.cpp  OpenGL_VertexBuffer.cpp
src/Renderer/RendererAPIs/OpenGL/Shaders/: OpenGL_Shader.cpp
src/Tests/Renderer/Phong/: phong.cpp  phong.frag  phong.vert  triangle.hpp
src/Tests/Renderer/Phong/Mono/: phong_mono.cpp  phong_mono.frag  phong_mono.vert
src/Tests/Renderer/TestTextures/: Frag.frag  Vert.vert  main.cpp
src/Tests/Renderer/TestVAO/: Frag.frag  TestVAO.cpp  Vert.vert
